homepage spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,6 @@ body p {
     text-align: left;
     color: #F3E4DE;
     padding-top: 20px;
-    padding-bottom: 20px;
-    margin-bottom: 40px;
 }
 
 /* home page image */
